--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&display=swap');
 
+* {
+    margin:0px;
+    padding:0px;
+    
+}
+
 html {
     background-image: url('./assets//home/background-home-desktop.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+
 }
 
 
@@ -14,12 +21,16 @@ html {
     height: 48;
 }
 
+body {
+    overflow: hidden;
+}
+
 
 #header-wrapper {
     display: flex;
     align-items: center;
     flex-direction: row;
-    max-width: 100%;
+    width: 100%;
     max-height: 96px;
     transform: translateX(11%) translateY(40px);
 
@@ -28,7 +39,8 @@ html {
 #line-effect {
     width: 473px;
     height: 1px;
-    background-color: #a8a8a8;
+    opacity: 0.25;
+    background: #FFFFFF;
     -webkit-transform: translateX(7%);
     transform: translateX(7%);
     z-index: 33333;
@@ -39,9 +51,9 @@ html {
     align-items: center;
     display: flex;
     flex-direction: row;
-    width: 90%;
+    width: 100%;
     max-height: 96px;
-    background: rgba(255, 255, 255, 0.04); 
+    background: rgba(255, 255, 255, 0.034); 
     backdrop-filter: blur(81.5485px);    
     /* backdrop-filter allows: blur effect or color shifting to the are behind an element, */  
     /*have the make the background of the element partially transperant */ 
