--- a/style.css
+++ b/style.css
@@ -8,23 +8,28 @@
     
 }
 
+#root {
+    background-image: url('./assets//home/background-home-desktop.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 
 #app {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 900px;
+    height: 100vh;
     margin: auto;
-    max-width: 1400px;
+    /* width: 100%; */
+    
 }
 
-html {
-    background-image: url('./assets//home/background-home-desktop.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-}
+/* html {
+    
+    max-width: 1440px;
+    height: 900px;
+} */
 
 
 .logo {
@@ -35,7 +40,7 @@ html {
 }
 
 body {
-    
+    overflow: hidden;
     margin: auto;
 }
 
@@ -43,17 +48,15 @@ body {
 #header-wrapper {
     display: flex;
     align-items: center;
-    flex-direction: row;
-    margin-top: 40px;
-    margin-left: 55px;
-    margin-bottom: 251px;
-    max-width: 1385px;
-    max-height: 96px;
-
+    padding: 44px 0px 0px 0px;
+    margin-bottom: 200px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #line-effect {
-    width: 473px;
+    min-width:473px;
     height: 1px;
     opacity: 0.25;
     background: #FFFFFF;
@@ -64,14 +67,11 @@ body {
 }
 
 #nav-bar-wrapper {
-    max-width: 830px;
-    margin-right: -38px;
-    /* font-family: 'Barlow Condensed', sans-serif; */
+    font-family: 'Barlow Condensed', sans-serif;
     align-items: center;
     display: flex;
     flex-direction: row;
-
-    /* padding-right: 102px; */
+    width: 100%;
     max-height: 96px;
     background: rgba(255, 255, 255, 0.034); 
     backdrop-filter: blur(81.5485px);    
@@ -81,7 +81,7 @@ body {
 }
 
 #nav-bar-links {
-    margin-left: 123px;
+    margin-left: 183px;
     margin-right: 165px;
     margin-top: 39px;
     margin-bottom: 38px;
